<resources>
    <string name="app_name">Connect 4</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="game_finished_title">Game Finished!</string>
    <string name="default_p_1_name">Player 1</string>
    <string name="default_p_2_name">Player 2</string>
    <string name="game_end_content">The Game has been won by %s. Do you want a Rematch?</string>
    <string name="local_multiplayer">Local Multiplayer</string>
    <string name="online_multiplayer">Online Multiplayer</string>
    <string name="developed_by">Developed By:</string>
    <string name="developers">Emmanuel Estrella \n Jaime Rojas \n Moises Ynfante</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="error_get_inbox_intent">There was a problem getting the inbox intent!</string>
    <string name="error_get_select_opponents">There was a problem getting the select opponents intent!</string>
    <string name="turn_label">Turn %1$d</string>
    <string name="player_waiting_text">Waiting for a player to join...</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="match_cancelled_by_player">The other player cancelled the match</string>
</resources>
