<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.GameActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/icon_container"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/turn_center_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/currently_playing"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textAllCaps="true"
            />
        <ImageView
            android:id="@+id/p1_center_icon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/turn_center_text"
            android:adjustViewBounds="true"
            android:src="@drawable/chip_vector_p1" />
        <ImageView
            android:visibility="invisible"
            android:id="@+id/p2_center_icon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/turn_center_text"
            android:adjustViewBounds="true"
            android:src="@drawable/chip_vector_p2" />
        <TextView
            android:id="@+id/player_center_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_below="@id/p1_center_icon"
            android:text="@string/default_p_1_name"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_below="@id/icon_container">
        <!-- Chip Grid Start -->
        <GridView
            android:visibility="visible"
            android:background="@drawable/chips_grid_background"
            android:layout_alignParentBottom="true"
            android:id="@+id/board_fill"
            android:animateLayoutChanges="true"
            android:numColumns="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!-- Chip Grid End -->
        <!-- Tile Grid Start -->
        <GridView
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:id="@+id/board_grid"
            android:numColumns="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!-- Tile Grid End -->
    </RelativeLayout>
    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/waiting_for_player_layout"
        android:orientation="vertical"
        android:background="#cbffffff"
        android:layout_width="match_parent"
        android:focusable="true"
        android:clickable="true"
        android:layout_height="match_parent">
        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/waiting_text"
            android:padding="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/player_waiting_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- Loading Chips Start -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/waiting_text">
            <ImageView
                android:visibility="invisible"
                android:id="@+id/loading_1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/chip_vector_p1" />
            <ImageView
                android:visibility="invisible"
                android:id="@+id/loading_2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/chip_vector_p2" />
            <ImageView
                android:visibility="invisible"
                android:id="@+id/loading_3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/chip_vector_p1" />
            <ImageView
                android:visibility="invisible"
                android:id="@+id/loading_4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/chip_vector_p2" />
        </RelativeLayout>
        <!-- Loading Chips End -->
        <!--<ProgressBar-->
            <!--android:layout_below="@id/waiting_text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->

        <android.support.v7.widget.AppCompatButton
            android:layout_alignParentBottom="true"
            style="@style/styled_button"
            android:visibility="visible"
            android:id="@+id/cancel_btn"
            android:text="Cancel"
            app:backgroundTint="@color/colorPrimaryDark"
            />

    </RelativeLayout>


</RelativeLayout>
